@@ -30,6 +30,7 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 Also, do not normalize `-` to `_` in header names.
 - [FIX] More robust processing of potentially incomplete Ring request maps to extract server span attributes.
 - [FIX] To ensure HTTP/2 compatibility, read server name and port from Ring request map rather than `Host` header, which is supported in HTTP/1.1 only.
+- [FIX] Do not include app-root in server span names.
 - [ADD] By default, populate `code.function.name` attribute to name of function containing the start of each span.
 This is implemented using the StackWalker API for performance reasons, starting in Java 9.
 If StackWalker is not available, the attribute is not populated.
